Fix spacing between steps in #apply

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -23,7 +23,7 @@ html, body {
   height: 100%;
   font-family: 'Lato', sans-serif;
 }
-x
+
 h1, h2, h3, h4, h5, h6 {
   font-family: 'Quicksand',  sans-serif;
   margin: 30px 0;
@@ -66,7 +66,7 @@ a {
 nav {
   position: absolute;
   width: 50%;
-  top: 45px;
+  top: 30px;
   right: 30px;
   padding: 10px 0;
   color: white;
@@ -166,7 +166,7 @@ header {
   }
 }
 
-@media all and (max-width: 1440px) {
+@media all and (max-width: 1200px) {
   nav {
     width: 100%;
     top: 0;
@@ -322,7 +322,7 @@ section {
         background: $basepurple;
         border-radius: none;
         color: white;
-        font-family: "yanone kaffeesatz", sans-serif;
+        font-family: inherit;
         font-size: 2rem;
         height: auto;
         outline: none;
